@@ -71,6 +71,7 @@ DETAILED CHANGES:
 	- ADDED: SetRenderTextureTexture and SetRenderTextureDepthTexture.
 	- FIXED: LoadRenderTextureFromData also attaches textures to framebuffer.
 	- FIXED: rlColorMask set all channels to red.
+	- FIXED: rlDrawVertexArrayInstanced use offset.
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.8.0		Using Raylib 5.0 and Forked Raygui 4.0
